# stealthhub-panel

./: .gitignore  Cargo.toml  LICENSE.ru.md  NOTICE  README.md
.cargo/: audit.toml
.github/workflows/: release.yml  rust.yml
crates/stealthhub-cli/: Cargo.toml
crates/stealthhub-cli/src/: main.rs
crates/stealthhub-core/: Cargo.toml
crates/stealthhub-core/src/: headscale_control.rs  lib.rs  mihomo.rs  models.rs  module_manifest.rs  rules.rs  storage.rs
crates/stealthhub-panel/: Cargo.toml
crates/stealthhub-panel/src/: headscale.rs  health.rs  ip.rs  main.rs  modules.rs  ops.rs  tests.rs  ui.rs  update.rs
crates/stealthhub-panel/src/assets/: panel.css
crates/stealthhub-panel/src/views/: components.rs  configs.rs  credits.rs  dashboard.rs  headscale.rs  health.rs  ip.rs  mod.rs  modules.rs  protocols.rs  public.rs  routing.rs  settings.rs  subscription.rs  system.rs  users.rs
deploy/: bootstrap.sh  infiproxy-manager.sh  infiproxy-module-update.path  infiproxy-module-update.service  infiproxy-module-update.timer  infiproxy-panel-update.path  infiproxy-panel-update.service  infiproxy-panel-update.timer  infiproxy-profile.sh  infiproxy.env.example  infiproxy.service  install.sh  module-manifest.py  module-update.sh  nginx-infiproxy.conf.example  panel-update.sh  stealthhub-panel.env.example  stealthhub-panel.service
deploy/cores/: README.md  core-update-manifest.example.toml  install-core.sh
deploy/cores/configs/: hysteria.config.example.yaml  mtproto.env.example  sing-box.config.example.json  tuic.config.example.json
deploy/cores/systemd/: headscale.service  infiproxy-hysteria.service  infiproxy-mtproto.service  infiproxy-sing-box.service  infiproxy-tuic.service  infiproxy-xray.service  stealthhub-hysteria.service  stealthhub-sing-box.service  stealthhub-tuic.service  stealthhub-xray.service
deploy/modules.d/: headscale.module  hysteria.module  mtproto.module  sing-box.module  tuic.module  xray.module
deploy/tests/: updater-regression.sh
deploy/tests/fixtures/: tuic-release-null-digest.json
docs/: VPS_INSTALL.md
