[workspace]
resolver = "2"
members = [
  "crates/stealthhub-core",
  "crates/stealthhub-panel",
  "crates/stealthhub-cli"
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Fedor Korneev"]
repository = "https://github.com/infinitrator/stealthhub-panel"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
maud = { version = "0.26", features = ["axum"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
clap = { version = "4", features = ["derive"] }
