[workspace]
resolver = "2"
members = [
  "crates/stealthhub-core",
  "crates/stealthhub-panel",
  "crates/stealthhub-cli"
]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Fedor Korneev"]
repository = "https://github.com/infinitrator/stealthhub-panel"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
maud = { version = "0.27", features = ["axum"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
clap = { version = "4", features = ["derive"] }
subtle = "2"
