[package]
name = "stealthhub-panel"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
maud.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
stealthhub-core = { path = "../stealthhub-core" }
