[package]
name = "stealthhub-panel"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
cookie.workspace = true
maud.workspace = true
rand_core.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
sqlx.workspace = true
stealthhub-core = { path = "../stealthhub-core" }
subtle.workspace = true
